<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextureView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/back_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="invisible" />
    <!--控制台-->
    <RelativeLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#bb000000">
        <!--进度条+时间-->
        <LinearLayout
            android:id="@+id/seek_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />
            <!--时间-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="00:00"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="/"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/time_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:text="00:00"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

        </LinearLayout>
        <!--播放控制台-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_and_time"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp">

            <com.example.twj.view.IconTextView
                android:id="@+id/video_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/control_button_selector"
                android:padding="30dp"
                android:text="@string/ic_video_last"
                android:textColor="@color/colorWhite"
                android:textSize="30dp" />

            <com.example.twj.view.IconTextView
                android:id="@+id/video_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/control_button_selector"
                android:padding="30dp"
                android:text="@string/ic_video_suspend"
                android:textColor="@color/colorWhite"
                android:textSize="30dp" />

            <com.example.twj.view.IconTextView
                android:id="@+id/video_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/control_button_selector"
                android:padding="30dp"
                android:text="@string/ic_video_next"
                android:textColor="@color/colorWhite"
                android:textSize="30dp" />
        </RelativeLayout>
    </RelativeLayout>

    <com.example.twj.view.IconTextView
        android:id="@+id/video_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="30dp"
        android:text="@string/ic_video_rebroadcast"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        android:visibility="gone" />

    <com.example.twj.view.IconTextView
        android:id="@+id/video_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/control_button_selector"
        android:padding="30dp"
        android:text="@string/ic_video_close"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />


    <LinearLayout
        android:id="@+id/digital_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/video_digital_shape"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <com.example.twj.view.IconTextView
            android:id="@+id/icon_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="100"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="%"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>


</RelativeLayout>